analysis file created

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ go.work.sum
 
 # Test csv files
 *.csv
+
+# Sigma rules taken from SigmaHQ GitHub repository
+# https://github.com/SigmaHQ/sigma/tree/master/rules/cloud/m365
+./sigma/
