--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,4 @@ go.work.sum
 
 # Sigma rules taken from SigmaHQ GitHub repository
 # https://github.com/SigmaHQ/sigma/tree/master/rules/cloud/m365
-./sigma/
+sigma
